# \ <section:package>
[package]
name                   = "rustpill"
version                = "0.0.1"
authors                = ["Dmitry Ponyatov <dponyatov@gmail.com>"]
# / <section:package>
edition                = "2018"
# \ <section:dependencies>
[dependencies]
cargo-binutils         = "*"
cortex-m               = "*"
cortex-m-rt            = "*"
cortex-m-semihosting   = "*"
panic-halt             = "*"
[dependencies.stm32f1xx-hal]
features               = ["stm32f100","rt"]
# / <section:dependencies>
# \ <section:bin>
[[bin]]
name                   = "rustpill"
test                   = false
bench                  = false
# / <section:bin>
